k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-svc
  namespace: car-trawler
spec:
  selector:
    app: nodejs
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
