k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-ingress
  namespace: car-trawler
spec:
  ingressClassName: nginx
  rules:
  - host: ad4ee035f8df843d79165974acde1c7b-1978458333.eu-west-1.elb.amazonaws.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nodejs-svc
            port:
              number: 80
